# nanoblas

./: .buildinfo  .gitignore  CMakeLists.txt  README.md  genindex.html  intro.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py
_sources/: intro.md
demos/: CMakeLists.txt  demo_lapack.cpp  demo_matrix.cpp  demo_vector.cpp
nanoblas/: __init__.py
src/: CMakeLists.txt  bind_bla.cpp  inverse.hpp  lapack_interface.hpp  matexpr.hpp  matrix.hpp  vecexpr.hpp  vector.hpp
